<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <Button
        android:id="@+id/button_workout"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="82dp"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="82dp"
        android:layout_marginRight="82dp"
        android:hint="@string/button_workout"
        android:onClick="workOut"
        android:textColorHighlight="#B6B2B2"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#BDB5B5"
        app:backgroundTint="#1A1E1C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_menu" />

    <Button
        android:id="@+id/button_run"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:hint="@string/button_run"
        android:textColorHint="#FFFFFF"
        app:backgroundTint="#1A1E1C"
        app:layout_constraintEnd_toEndOf="@+id/button_workout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button_workout"
        app:layout_constraintTop_toBottomOf="@+id/button_workout" />

    <Button
        android:id="@+id/button_editprofile"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:hint="@string/button_editprofile"
        android:onClick="editProfile"
        android:textColor="#1A1E1C"
        android:textColorHint="#1A1E1C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_run" />

    <ImageView
        android:id="@+id/logo_menu"
        android:layout_width="315dp"
        android:layout_height="307dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:contentDescription="Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pngtreehealth_fitness_logo_design_3788375" />

</androidx.constraintlayout.widget.ConstraintLayout>